<resources>
    <string name="app_name">GoTorcida</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">GoTorcida - Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_select_sports">SelectSports</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_register">Novo usuário</string>

    <string name="hint_name">Nome Completo</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Senha</string>
    <string name="btn_sign_up">Cadastrar</string>
    <string name="err_msg_name">Utilize seu nome Completo</string>
    <string name="err_msg_email">Utilize um email válido</string>
    <string name="err_msg_password">Insira sua senha</string>
    <string name="hint_date_of_birth">Aniversário</string>
    <string name="next">next</string>
    <string name="title_activity_teams">TeamsActivity</string>
    <string name="modalidade_de_esporte">Modalidade de Esporte</string>
    <string name="nome_do_seu_time">Nome do seu Time</string>
    <string name="telefone">Telefone</string>
    <string name="observacoes">Observacoes</string>
    <string name="cidade">Cidade</string>
    <string name="enviar">Enviar</string>
    <string name="salvar">Salvar</string>
    <string name="mensagem_com_sucesso">Mensagem enviada com sucesso! Aguarde nosso contato.</string>
    <string name="dialog_about_message">Projeto de Conclusão de Curso 8º CCO</string>

    <string-array name="titles_tabs">
        <item>Jogos</item>
        <item>Elenco</item>
        <item>Notícias</item>
        <item>Contato</item>
    </string-array>

    <string-array name="states_array">
        <item>Estado</item>
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>

    <string name="facebook_app_id">1319081791438354</string>
    <string name="title_activity_home_adm">HomeAdmActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="como_chegar">Como Chegar</string>

</resources>
